@@ -1,3 +1,13 @@
+2022-10-05  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* doc/meref.me.in: Fix documentation errors.
+	(Preprocessor Support) <PS>: Swap argument order (width comes
+	first), note empty defaults, and (vaguely) describe their
+	purpose.  DWB and GNU pic semantics evidently diverge here.
+	(Summary) <\_>: Describe as "underrule", not "underscore".
+	These are distinct: the latter is a glyph; the former is drawn
+	by typesetters and rendered with SGR attributes on terminals.
+
 2022-10-04  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* NEWS: Advise users of changes to "name" directive handling in
